--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "ExpressApp",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.15.2",
-    "dotenv": "^2.0.0",
-    "express": "^4.14.0",
-    "knex": "^0.12.6",
-    "pg": "^6.1.0"
-  }
+    "name": "ExpressApp",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.15.2",
+        "dotenv": "^2.0.0",
+        "express": "^4.14.0",
+        "knex": "^0.12.6",
+        "pg": "^6.1.0"
+    }
 }
